--- a/admin.html
+++ b/admin.html
@@ -7,16 +7,42 @@
   <title>Painel do Administrador</title>
   <script type="module" src="supabase.js"></script>
   <script type="module" src="admin.js"></script>
+  <link rel="stylesheet" href="admin.css" />
 </head>
 <body>
-  <h1>Painel do Administrador</h1>
+  <div class="header-container" style="display: flex; align-items: center; justify-content: center; gap: 25px; margin-bottom: 20px;">
+    <img src="./assets/logo-2.png" alt="Logo da Empresa" style="height: 80px; width: auto;" />
+    <h1>Status de Cadastro</h1>
+  </div>
+
+  <!-- Campo de Busca por CPF -->
+  <div style="margin-bottom: 15px; text-align: center;">
+    <label for="buscaCPF" style="font-weight: bold; margin-right: 10px;">Buscar por CPF - CNPJ:</label>
+    <input
+      type="text"
+      id="buscaCPF"
+      placeholder="Digite o CPF ou CNPJ"
+      style="padding: 10px; width: 150px; border-radius: 4px; border: 1px solid #ccc;"
+      onkeyup="filtrarTabela()"
+    />
+  </div>
+
   <table border="1">
     <thead>
       <tr>
-        <th>Nome</th>
-        <th>Email</th>
-        <th>Status</th>
-        <th>Ações</th>
+        <th>NOME</th>
+        <th>TELEFONE</th>
+        <th>E-MAIL</th>
+        <th>OPERAÇÃO</th>
+        <th>SIGLA</th>
+        <th>CATEGORIA</th>
+        <th>CPF - CNPJ</th>
+        <th>CNH</th>
+        <th>RG</th>
+        <th>CRLV</th>
+        <th>ANTT</th>
+        <th>RESIDENCIA</th>
+        <th>STATUS</th>
       </tr>
     </thead>
     <tbody id="tabela-cadastros"></tbody>
@@ -34,8 +60,6 @@
   <script type="module" src="supabase.js"></script>
   <script type="module" src="status.js"></script>
 </head>
-<body>
-  <h1>Status do seu Cadastro</h1>
-  <p id="mensagem-status">Carregando...</p>
+<body> 
 </body>
 </html>
