--- a/login.html
+++ b/login.html
@@ -6,8 +6,9 @@
     <title>Login - Murici Logística</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+    <script type="module" src="login.js"></script>
 </head>
-<body class="bg-gray-100 flex items-center justify-center h-screen">
+<body class="bg-gray-100 flex items-center justify-center min-h-screen">
     <div class="bg-white shadow-md rounded-lg p-8 w-full max-w-md">
         <div class="flex justify-center mb-6">
             <div class="bg-indigo-600 text-white p-4 rounded-lg shadow-lg">
@@ -16,16 +17,21 @@
         </div>
         <h2 class="text-2xl font-bold text-center text-gray-800 mb-6">Acesso ao Painel</h2>
 
-        <form>
+        <!-- Formulário de login -->
+        <form id="form-login">
             <div class="mb-4">
                 <label for="email" class="block text-sm font-medium text-gray-700 mb-1">E-mail</label>
                 <input type="email" id="email" name="email" required
                     class="w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-500"/>
             </div>
-            <div class="mb-6">
+            <div class="mb-2">
                 <label for="senha" class="block text-sm font-medium text-gray-700 mb-1">Senha</label>
                 <input type="password" id="senha" name="senha" required
                     class="w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-500"/>
+            </div>
+
+            <div class="text-right mb-4">
+                <a href="#" onclick="mostrarRecuperacao()" class="text-sm text-indigo-600 hover:underline">Esqueci minha senha</a>
             </div>
 
             <button type="submit"
@@ -34,9 +40,22 @@
             </button>
         </form>
 
+        <!-- Link para cadastro -->
         <p class="mt-4 text-center text-sm text-gray-600">
             Ainda não tem cadastro? <a href="index.html" class="text-indigo-600 hover:underline">Cadastrar</a>
         </p>
+
+        <!-- Formulário de recuperação de senha -->
+        <div id="recuperar-senha" class="mt-6 hidden">
+            <h3 class="text-lg font-semibold text-gray-800 mb-2 text-center">Recuperar Senha</h3>
+            <input type="email" id="email-recuperar" placeholder="Digite seu e-mail"
+                class="w-full px-4 py-2 mb-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-500"/>
+            <button onclick="enviarRecuperacao()"
+                class="w-full bg-yellow-500 text-white py-2 px-4 rounded-md hover:bg-yellow-600 transition duration-300">
+                Enviar e-mail de recuperação
+            </button>
+            <p id="mensagem-recuperacao" class="mt-2 text-sm text-center"></p>
+        </div>
     </div>
 </body>
 </html>
