--- a/admin.html
+++ b/admin.html
@@ -45,6 +45,23 @@
         <th>STATUS</th>
       </tr>
     </thead>
+    <thead>
+      <tr>
+        <th>Roberto Freires Silva</th>
+        <th>(11)97790-0416</th>
+        <th>doutorcodee@gmail.com</th>
+        <th>Programador</th>
+        <th>DEV</th>
+        <th>Tecnologia</th>
+        <th>30.257.423.0001-52</th>
+        <th>IMG</th>
+        <th>IMG</th>
+        <th>IMG</th>
+        <th>IMG</th>
+        <th>IMG</th>
+        <th>Em Análise</th>
+      </tr>
+    </thead>
     <tbody id="tabela-cadastros"></tbody>
   </table>
 </body>
