--- a/index.html
+++ b/index.html
@@ -230,8 +230,19 @@
 
         <!-- Footer -->
         <footer class="mt-12 text-center text-gray-500 text-sm">
-            <p>© 2023 Murici Logística. Todos os direitos reservados.</p>
-            <p class="mt-1">Em caso de dúvidas, entre em contato com nosso suporte.</p>
+            <p>© 2025 - Murici Logística. Todos os direitos reservados.</p>
+            <p class="mt-1">Em caso de dúvidas, entre em contato com nosso 
+                <a href="https://www.muricilogistica.com.br/contato" target="_blank" class="text-indigo-600 hover:underline"> 
+                <strong>Suporte</strong>
+           </a>
+            </p>
+            <p>
+                Feito por 
+                <a href="https://billsmokexv.github.io/portfolio/" target="_blank" class="text-red-600 hover:underline"> 
+                     <strong >Dr. Code</strong>
+                </a>
+                
+            </p>
         </footer>
     </div>
 
